trying to fix issues on mobile preview, edits to styling for mobile and shows pages

--- a/assets/styles/theme/_theme.scss
+++ b/assets/styles/theme/_theme.scss
@@ -424,7 +424,7 @@ a:focus {
 
 	.single .entry-header h1 {
 		line-height: 1.2;
-		font-size: 30px;
+		font-size: 26px;
 	}
 
 }
@@ -2376,7 +2376,7 @@ table tr th {
 	}
 
 	.entry-content .wp-block-quote:not(.is-large):not(.is-style-large) p {
-		font-size: 1.6em;
+		font-size: 16px;
 		line-height: 1.9;
 	}
 
